Fixed a little bit of margin and spacing for the posts

--- a/styles/wall.css
+++ b/styles/wall.css
@@ -132,6 +132,7 @@ input{
 input:focus {
   border: solid 2px rgb(14, 28, 54);
 }
+
 .posts-list-container{
   display: flex;
   flex-wrap: wrap;
@@ -162,11 +163,17 @@ input:focus {
   display: flex;
   flex:1;
   justify-content: center;
-  align-items: center;
+  align-items: top;
 }
 
-.topic-image-container img {
+.topic-image-container div {
   width: 100%;
+  padding-top: 5px;
+}
+.topic-image-container img{
+  width: 38px;
+  height: 38px;
+  object-fit: cover;
 }
 
 .profile-image-container img{
@@ -179,17 +186,21 @@ input:focus {
 }
 .details-container{
   flex:6;
-  padding-left: 5px;
+  padding-left: 12px;
   color: rgb(14, 28, 54);
 }
 .details-container .title{
   margin-bottom: 5px;
+  font-weight: 500;
+}
+.details-container .name{
+  font-size: 13.5px;
 }
 .status{
   color: rgb(130, 130, 130);
-  font-size: .8em;
+  font-size: 12px;
   margin-top: 5px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 .message-container{
   display: flex;
@@ -336,6 +347,10 @@ input:focus {
 .themes-choices-container {
   display: flex;
   column-gap: 7px;
+}
+.themes-choices-container div{
+  cursor: pointer;
+  border: solid 1.5px transparent;
 }
 .themes-choices-container div:nth-child(1){
   width: 25px;
